[tool.poetry]
name = "ast-matcher"
version = "0.1.0"
description = "Python AST Matcher."
authors = ["Sergey Reshetnikov <resh.sersh@gmail.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/PrVrSs/ast-matcher"
homepage = "https://github.com/PrVrSs/ast-matcher"

keywords = [
  "AST",
  "Pattern Matching",
]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "^8.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pylint = "^2.7.4"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
tomlkit = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
